fixed on hover flicker

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -56,6 +56,7 @@ ul {
   li {
 
     a:hover {
+      border-bottom: 1px solid transparent;
       border-top: 0.5px solid #fb0;
       background-color: #ffcc40 !important;
       color: #fff !important;
